2002-10-17  Bill Bumgarner  <bbum@codefab.com>
	* propertyListFromPythonCollection() takes an optional kv argument
	that is used as a helper function when the type to be converted in
	the python collection is not recognized.   For example, the
	xmlrpclib returns a [somewhat inadequate] internal type known as a
	DateTime.  To convert this to a Foundation class requires some
	jumping through hoops that may change a bit during context.  The
	caller can provide a helper function to do the conversion.

2002-10-16  Bill Bumgarner  <bbum@codefab.com>
	* NSClassFromString() was implemented twice in the Foundation's
	__init__.py.  The second implementation was supposed to be
	NSStringFromClass(). Fixed.

	* Added propertyListFromPythonCollection() function to
	Foundation.  It converts a Python collection (string / dict /
	array / tuple / numbers) into a corresponding tree of Obj-C
	NSString / NSDictionary / NSArray / NSArray / NSNumber instances.

2002-10-15 Ronald Oussoren <oussoren@cistron.nl>
	* Exceptions are now transparently transfered to the other language.
	  Upon transitioning back into the source language the exception
	  regains its orginal 'identity'

2002-10-11  Bill Bumgarner  <bbum@codefab.com>
	* Removed various debugging/development noise from startup.

	* Regenerated various incs in Modules/Cocoa based on new scripts.

	* Updated Examples/WebServicesTool to be compatible with Apple
	supplied Python.  Created a new main() implementation that
	transfers control to '/usr/bin/python' via execve().

	* Modules/Cocoa/scripts: Modified all scripts to use 0/1 instead
	of False/True for compatibility with Python 2.2.  Modified scripts
	that generate a table of information to emit the 'static' keyword
	at the head of the declaration.  This fixes a namespace collision
	with the Apple supplied Python.
	

2002-10-10 Ronald Oussoren <oussoren@cistron.nl>
	* Modules/objc/objc-class.m: Implemented a 'class_traverse' function